History of this buildout
========================

6.0.20 (unreleased)
-------------------

- MINA-151: Styling fixes as color to white and the correct font styling,
  Also remove the tooltip when there is a click.
  [lhuiskes]

- MINA-154: fixed error when adding a content item to a project.  This
  happened in an event handler in some project states where there was
  no committee set.  [maurits]

- MINA-153: Directly link to newsletter archive on mailchimp.com.
  Completely removed nieuwsbrieven page (mailchimp archive).  [maurits]

- MINA-151: Move inlog and logout to header underneath the search.
  and add a tooltip from jquery ui with timeout and custom styling.
  [lhuiskes]


6.0.19 (2016-06-02)
-------------------

- MINA-153: Fixed news letters page.  Fixed typo.  Used ``//`` instead
  of ``http://`` to avoid mixed content.  Removed styling on this
  page: it was commented out, and enabling it showed no difference.
  [maurits]


6.0.18 (2016-05-27)
-------------------

- MINA-150: check View permission when listing related items on theme.
  Check this in all other locations too, like homepage, Events, Studies.
  [maurits]


6.0.17 (2016-05-26)
-------------------

- Increase width of footer image to 2000.  [jladage]


6.0.16 (2016-05-24)
-------------------

- Increase width of footer image in theme model.  [jladage]

- Update phone number in header.  [jladage]


6.0.15 (2016-05-20)
-------------------

- MINA-138 remove height from body and html since it broke flexbox on safari.
  [lhuiskes]

- MINA-147: Move advisory when linked project gets a new theme.  We
  also do this for all projects in an upgrade step.  [maurits]


6.0.14 (2016-05-18)
-------------------

- MINA-143: when Event is past, still show the agenda.  [maurits]

- Updated icons in catalog metadata.  Old brains were still pointing
  to .gif files instead of .png files.  [maurits]

- MINA-136: Reverse sort referencebrowserwidget on effective date.