@@ -7071,19 +7071,7 @@ span.featherlight-close-icon.featherlight-close {
       padding-left: 5px;
       color: white; }
   .logobar .login_form {
-    clear: both;
-    float: right; }
-    .logobar .login_form a {
-      float: right; }
-      .logobar .login_form a:link, .logobar .login_form a:visited {
-        color: #fff; }
-    .logobar .login_form p {
-      margin: 10px 0; }
-      .logobar .login_form p:after {
-        content: "";
-        clear: both;
-        width: 100%;
-        display: block; }
+    display: none; }
 
 .ui-tooltip {
   right: 15px; }
@@ -7199,7 +7187,22 @@ dl.actionMenu {
         color: #76797c; }
     .logobar .navbar-brand {
       margin-top: 15px;
-      padding: 0; } }
+      padding: 0; }
+    .logobar .login_form {
+      clear: both;
+      float: right;
+      display: block; }
+      .logobar .login_form a {
+        float: right; }
+        .logobar .login_form a:link, .logobar .login_form a:visited {
+          color: #fff; }
+      .logobar .login_form p {
+        margin: 10px 0; }
+        .logobar .login_form p:after {
+          content: "";
+          clear: both;
+          width: 100%;
+          display: block; } }
 
 .breadcrumbbar {
   display: none; }
