@@ -6,6 +6,7 @@ History of this buildout
 
 - MINA-151: Styling fixes as color to white and the correct font styling,
   Also remove the tooltip when there is a click.
+  Remove login button for mobile.
   [lhuiskes]
 
 - MINA-154: fixed error when adding a content item to a project.  This
